welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: forward reference extends over definition of variable nbDiag
  var nbDiag:Int=h*2-1
                 ^Diagonal:2: error: forward reference extends over definition of variable diag
  var nbDiag:Int=h*2-1
                 ^Diagonal:2: error: forward reference extends over definition of variable h
  var nbDiag:Int=h*2-1
                 ^